[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cpp-chunker"
version = "0.1.1"
description = "C++ chunker"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["pybind11>=2.10.0"]
license = {text = "MIT"}
authors = [
    {name = "Christian", email = "alch.infoemail@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++"
]

[tool.setuptools.packages.find]
exclude = ["pybind11*", "build*", "*.egg-info*"]

[tool.setuptools]
py-modules = ["chunker"]
